# kanshazhe-financial

./: .gitignore  AI通用关键词模板.md  CLAUDE.md  LICENSE  README.md  index.html  keys-database.json  package-lock.json  package.json  start.bat  stop.bat  updater-key.pem  updater-key.pem.pub  vite.config.js  wrangler.toml  商品截图_b64.json  教学借鉴调研报告.md  经验总结.md  観測者财务宣传.html  观测者财务_商品介绍_闲鱼拼多多.html  观测者财务_操作指南与出售流程.md  财务机器人经验总结.md
.claude/: construction_04_output.json
admin-mobile/: app-debug-signed.apk.idsig  index.html  package-lock.json  package.json
admin-mobile/src-tauri/: Cargo.toml  tauri.conf.json
admin-mobile/src-tauri/capabilities/: default.json
admin-mobile/src-tauri/icons/: icon.icns
admin-mobile/src-tauri/src/: main.rs
backup-commercial/: 01.js  02.js  03.js  04.js  07.js  08.js  09.js  10.js  12.js  index.js
docs/: 拼多多商品文案预览.html  拼多多宣传图.html  教学知识点介绍.html  竞争品教学功能调研报告.md  系统使用说明书.html
release/: 非常重要！！.txt
scripts/: add-difficulty.cjs  add-docs-jan-feb.cjs  add-product-tables.cjs  add-remaining-structured-data.cjs  add-tags.cjs  add-tax-tasks.cjs  annotate-cashflow.mjs  apply-closing-fix.mjs  batch-fix.cjs  capture-gifs.cjs  cardify-industry.cjs  check-console-errors.cjs  check-html-js.mjs  complete-onboarding.cjs  compute-hashes.cjs  deep-audit.mjs  detect-kv-docs.cjs  diagnose-closing.cjs  embed-screenshots.mjs  enhance-knowledge-ui.cjs  enrich-industry-boxes.cjs  enrich-knowledge.cjs  extend-map.cjs  extract-page-state.cjs  (+62 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activation.rs  lib.rs
(+157 files in other folders)
