[package]
name = "kanshazhe-financial"
version = "0.2.0"
description = "观测者企业财务模拟系统 - 四行业教学版"
authors = ["kanshazhe"]
license = "MIT"
repository = "https://github.com/kanshazhe/kanshazhe-financial"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
open = "5"
# tauri-plugin-process = "2"  # 用于 update 后自动重启
tauri-plugin-updater = "2"

# 加密
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# 硬件指纹
machine-uid = "0.5"

# 文件操作（保存激活状态到 app data）
dirs = "6"
