[package]
name = "admin-mobile"
version = "1.0.0"
description = "密钥管理 — 观测者财务模拟系统"
edition = "2021"

[lib]
name = "admin_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
